--- a/index.html
+++ b/index.html
@@ -70,12 +70,8 @@
     </header>
 
     <main>
-      <!--
-        *
-        * Bloque MAIN
-        *
-      -->
-      
+      <!-- IMAGEN -->
+      <img src="_assets/img/logo.jpg" onmouseover="encojer()" onmouseout="tamaño_normal()" class="logoLasr" id="logoLasr" >
           <section>
             <!--
              *
